--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,12 @@ rvm:
   - 3.2.2
 
 services:
-- postgresql
+  - postgresql
+
+before_script:
+  - cp config/database.yml.travis config/database.yml
+  - psql -c 'create database "apiDemo_test";' -U postgres
+
+script:
+  - bundle exec rake db:migrate RAILS_ENV=test
+  - bundle exec rake
